--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,71 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
 }
 
-.App-header {
-  background-color: #222;
-  height: 100px;
-  padding: 20px;
-  color: white;
+.App nav {
+  border-bottom: 1px solid #ddf;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
-.App-intro {
-  height: 20px;
-  font-size: large;
+.App nav ul {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
-.App-header .Earth {
-  background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Whole_world_-_land_and_oceans_12000.jpg/640px-Whole_world_-_land_and_oceans_12000.jpg);
-  background-size: cover;
-  border: 0;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  animation: earth 50s linear 0s infinite;
-  box-shadow: 0 0 0px RGBA(255,255,255, 0.10),
-              inset 0 0 15px #000000;
-  margin: 0 auto;
-  transform: rotateX(6deg) rotateY(6deg) rotateZ(6deg);
+.App nav ul li {
+  display: inline-block;
+  font-size: 1.2em;
+  line-height: 40px;
+  height: 40px;
 }
 
-@keyframes earth {
-  0% { background-position: 0 0 }
-  100% { background-position: 355px 0 }
+.App nav ul li.burger {
+  display: none;
+}
+
+.App nav ul li a {
+  text-decoration: none;
+  color: #000;
+  display: block;
+  transition: .3s background-color;
+  padding: 0 1em;
+}
+
+.App nav ul li b {
+  display: block;
+  padding: 0 1em;
+}
+
+.App nav ul li a:hover {
+  background-color: #ddf;
+}
+
+@media screen and (max-width: 767px) {
+  .App nav ul li { text-align: left; display: block; }
+  .App nav ul li:not(:first-child) {display: none;}
+  .App nav ul li.burger {
+    float: right;
+    display: block;
+  }
+
+  .App nav ul.responsive li {position: relative;}
+
+  .App nav ul li.burger {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .App nav ul.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
